# smts

./: CMakeLists.txt  Dockerfile  make_combined_hostfile.py  mpi-run.sh
awcCloudTrack/awsRunBatch/: make_combined_hostfile.py  make_opensmt.sh  make_smts.sh  mpi-run.sh  run_aws_client.sh  run_aws_osmt.sh  run_aws_smts.sh  run_aws_smtsClient.sh  run_example.py
awcCloudTrack/buildECSCluster /: build-job-queue.yaml
ci/: run_travis_opensmtCommands.sh  run_travis_smtsCommands.sh
hpcClusterBenchs/: run-test.sh
server/: host_list  my_config.py  utils.py  version.py
server/config/: default.py
src/client/OpenSMT2/: CMakeLists.txt
src/lemma_server/: CMakeLists.txt
src/lib/: CMakeLists.txt
